--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -41,5 +41,5 @@
 }
 .Footer .FooterSocialLink:hover {
   color: hsl(0, 0%, 0%);
-  background-color: hsl(0, 0%, 93%);
+  background-color: hsl(208deg 21% 82%);
 }
