--- a/components/LoaderScreen/Loader.module.css
+++ b/components/LoaderScreen/Loader.module.css
@@ -1,15 +1,9 @@
 .Screen{
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100vh;
-  width: 100%;
-  opacity: 0;
-  animation: fade 0.4s ease-in forwards;
-  background: #e4ebf1;
-  -webkit-animation: fade 0.4s ease-in forwards;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 @keyframes fade {
   0% {
