--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -1,9 +1,11 @@
-.Nav{
+.Navbar{
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
   background-color: #e4ebf1;
 }
 
@@ -11,6 +13,7 @@
   display: flex;
   flex-direction: row;
   list-style: none;
+  margin: 0;
 }
 .Nav li a{
   display: block;
